--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -35,6 +35,7 @@
             <mat-list-item role="listitem">Исправлены ошибки при удалении файлов</mat-list-item>
             <mat-list-item role="listitem">Корректное отображение пользовательской информации</mat-list-item>
             <mat-list-item role="listitem">Решены проблемы с загрузкой файлов, содержащих в именах кириллицу</mat-list-item>
+            <mat-list-item role="listitem">Исправлено отображение страниц в разделе "Люди"</mat-list-item>
           </mat-list>
         </mat-tab>
       </mat-tab-group>
